...
            }
        },
        shape = RoundedCornerShape(ParallelAppDimensions.dialogCornerRadius),
    )
}

internal const val appSearchFieldTestTag: String = "app-search-field"

